z-index fix

--- a/app/assets/stylesheets/spree/backend/spree_scaffold.scss
+++ b/app/assets/stylesheets/spree/backend/spree_scaffold.scss
@@ -2,7 +2,9 @@
 *= require tinymce/dropzone
 *= require tinymce/insert
  */
-
+.ui-datepicker-div {
+    z-index: 99
+}
 .scaffold-tooltip {
     position: relative;
     display: inline-block;
